--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Cronometro</h1>
+    <h1>Cronômetro</h1>
 <div class="container">
     
     <div id="display">
